tests/baselines/reference/parser.numericSeparators.octalNegative.errors.txt
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/1.ts(1,5): error TS6188: Numeric seperators are not allowed at the end of a literal.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/2.ts(1,3): error TS1178: Octal digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/2.ts(1,3): error TS2304: Cannot find name '_110'.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/3.ts(1,2): error TS6188: Numeric seperators are not allowed at the end of a literal.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/3.ts(1,3): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/3.ts(1,3): error TS2304: Cannot find name 'O0101'.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/4.ts(1,5): error TS6188: Numeric seperators are not allowed at the end of a literal.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/4.ts(1,6): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/4.ts(1,6): error TS2304: Cannot find name '_11'.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/5.ts(1,12): error TS6188: Numeric seperators are not allowed at the end of a literal.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/5.ts(1,13): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/5.ts(1,13): error TS2304: Cannot find name '_'.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/6.ts(1,3): error TS1178: Octal digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/6.ts(1,3): error TS2304: Cannot find name '___0111010_0101_1'.


==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/1.ts (1 errors) ====
    0o00_
        ~
!!! error TS6188: Numeric seperators are not allowed at the end of a literal.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/2.ts (2 errors) ====
    0o_110
      
!!! error TS1178: Octal digit expected.
      ~~~~
!!! error TS2304: Cannot find name '_110'.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/3.ts (3 errors) ====
    0_O0101
     ~
!!! error TS6188: Numeric seperators are not allowed at the end of a literal.
      ~~~~~
!!! error TS1005: ';' expected.
      ~~~~~
!!! error TS2304: Cannot find name 'O0101'.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/4.ts (3 errors) ====
    0o01__11
        ~
!!! error TS6188: Numeric seperators are not allowed at the end of a literal.
         ~~~
!!! error TS1005: ';' expected.
         ~~~
!!! error TS2304: Cannot find name '_11'.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/5.ts (3 errors) ====
    0O0110_0110__
               ~
!!! error TS6188: Numeric seperators are not allowed at the end of a literal.
                ~
!!! error TS1005: ';' expected.
                ~
!!! error TS2304: Cannot find name '_'.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/6.ts (2 errors) ====
    0o___0111010_0101_1
      
!!! error TS1178: Octal digit expected.
      ~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name '___0111010_0101_1'.
    